Cleanup of code based on Checkstyle.
- Breaking up some of the longer lines.
- Marking arguments as final.
- Keeping variables from shadowing each other.
- Making some blocks of text and code blocks more readable.
- Pulling out magic constants.
- Ensuring consistent modifier orders and removing redundent values.
- etc.